# pixy2-libusb2-python

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  opencv_test.py  out0.ppm  setup.py
lib/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  example-Makefile  libpixyusb2.h  tes.cpp  test
pixy2_raw_frame.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: main.cpp
